# image_processor

./: ArgParsing.cpp  BaseFilter.cpp  BaseFilter.h  CMakeLists.txt  CropFilter.cpp  FiltersController.h  GrayscaleFilter.cpp  IOFile.cpp  NegativeFilter.cpp  SharpeningFilter.h  readme.md
image_processor/: ArgParsing.h  CropFilter.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  FiltersController.cpp  GaussianBlurFilter.cpp  GaussianBlurFilter.h  GrayscaleFilter.h  IOFile.h  Image.cpp  Image.h  MyOwnFilter.cpp  MyOwnFilter.h  NegativeFilter.h  SharpeningFilter.cpp  image_processor.cpp
